--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,7 +1,6 @@
-#endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://sick-fits-production.herokuapp.com/sick-fits-prod/prod
-datamodel: datamodel.graphql
-secret: ${env:PRISMA_SECRET}
+endpoint: ${env:PRISMA_ENDPOINT}
+datamodel: datamodel.prisma
+# secret: ${env:PRISMA_SECRET}
 hooks:
   post-deploy:
-      - graphql get-schema -p prisma
+    - graphql get-schema -p prisma
