--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 frontend/node_modules/
-.next
-.vscode
+
+frontend/.next
+frontend/.vscode
+backend/node_modules
+backend/.vscode
+backend/variables.env
