--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "8.3.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
+    "npm": "^6.13.0",
     "npm-run-all": "^4.1.3",
     "prisma": "1.17.1",
     "prisma-binding": "2.1.6",
