--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^1.18.4",
     "npm": "^6.13.0",
     "npm-run-all": "^4.1.3",
-    "prisma": "1.17.1",
+    "prisma": "^1.34.10",
     "prisma-binding": "2.1.6",
     "stripe": "^6.12.1"
   },
