--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,7 +1,7 @@
 #endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://server1prisma-defac8f724.herokuapp.com/gymcalserver_prisma/prod
+endpoint: http://localhost:7777
 datamodel: datamodel.prisma
-# secret: ${env:PRISMA_SECRET}
+secret: ${env:PRISMA_SECRET}
 hooks:
   post-deploy:
     - graphql get-schema -p prisma
