--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sick-fits-backend",
+  "name": "gymcalbackend",
   "description": "the backend of gymcal",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
