--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,5 +1,5 @@
 #endpoint: ${env:PRISMA_ENDPOINT}
-endpoint: https://us1.prisma.sh/cronwel-noel-irias-1f1e2a/backend/dev
+endpoint: https://gymcal-prisma-d6ee83fb0e.herokuapp.com/gymcal-prisma-service/prod
 datamodel: datamodel.prisma
 secret: ${env:PRISMA_SECRET}
 hooks:
