--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^16.12.0",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.5.8",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^2.9.0",
